# DFTL

./: .gitignore  CMakeLists nothreads.txt  CMakeLists.txt  README.md  build_dataset.c  build_dataset2-a-lot-random.c  build_dataset2-seq.c  build_dataset2.c  build_dataset3.c  dftl-tpftl代码分析.md  ftl2.c  main.c  perf2json.py  profile-benchmarks.sh  profile.sh  关键数据.txt  笔记.md  赛题二-1202-排名.xlsx
benchmarks/: project_hw_final  project_hw_lowmem  project_hw_nopipeline  project_hw_nosetvbuf  project_hw_nosmallopt  project_hw_round1
benchmarks/final/: pmap_final_medium.txt  strace.txt
benchmarks/lowmem/: pmap_lowmem.txt
benchmarks/no_GTD_bitmap/: pmap-hard.txt
benchmarks/nopipeline/: pmap_nopipeline.txt
benchmarks/nosetvbuf/: pmap_nosetbuf.txt  strace.txt
benchmarks/nosmallopt/: pmap_nosmallopt.txt
benchmarks/round1/: pmap_round1.txt
benchmarks/withCMT/: pmap-medium-1M-CMT.txt  pmap-medium-2GB-CMT.txt
ftl/: ftl.c  ftl.h
ftl-2/: ftl.c  ftl.h  readme.md
ftl-3/: ftl.c
ftl-4-failed/: ftl.c
results/finalround/: RSS-test.txt  analysis.txt
决赛第一轮提交/: ftl.c  ftl.h  作品原创性声明.docx  挑战赛道作品设计文档.docx
决赛第一轮提交/others/: public.h
测试结果记录/: 决赛第一轮代码-以及相关分析
赛事相关材料/: AIMS小分队-答辩PPT.pptx  赛题二决赛排名.xlsx
